--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href ="https://code.jquery.com/jquery-3.6.0.js">
   </head>
 
-  <body background="bg.jpg">
+  <body>
     <header>
       <h1>Welcome To My Page</h1>
     </header>
@@ -52,12 +52,18 @@
     <div class="footer">
         <h6><u>Socials:</u></h6>
           <div class="social">
-           <a href=https:"https://www.linkedin.com/in/asmi-jena-5957a0202"><i class="fab fa-linkedin fa-3x"></i></a>
+           <a href="https://www.linkedin.com/in/asmi-jena-5957a0202"><i class="fab fa-linkedin fa-3x"></i></a>
            <a href="https://https://github.com/Asmi-1"><i class="fab fa-github fa-3x"></i></a>
             <div class="last">
           </div>
         <hr width="1000px" color="black"> 
         <br></br> 
     </div>
+
+<div class="container">
+      <button id="switch" onclick="toggleTheme()">Switch</button>
+    </div>
+    <script src="index.js"></script>
+
   </body>
 </html>
